libk/REPL/delme
/home/ubuntu/git/repo.1/libk/REPL/replay.c: In function ‘replay’:
/home/ubuntu/git/repo.1/libk/REPL/replay.c:23:23: warning: unused variable ‘c’ [-Wunused-variable]
  int store[200]; char c; int retval;
                       ^
/home/ubuntu/git/repo.1/libk/REPL/waiter.c: In function ‘waiter’:
/home/ubuntu/git/repo.1/libk/REPL/waiter.c:3:3: error: unknown type name ‘clock_t’
   clock_t ticks1, ticks2;
   ^~~~~~~
/home/ubuntu/git/repo.1/libk/REPL/waiter.c:5:10: warning: implicit declaration of function ‘clock’ [-Wimplicit-function-declaration]
   ticks1=clock();
          ^~~~~
make: *** [dryrun] Error 1
